--- a/Backend/ms-cart/src/main/resources/application.properties
+++ b/Backend/ms-cart/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Configuración de la URL del servidor
 server.port=9001
 
-# Propiedades de JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
 
-# Configuración de la base de datos (usando MySQL como ejemplo)
-spring.datasource.url=jdbc:mysql://localhost:3306/mscart?serverTimezone=UTC
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mscart
 spring.datasource.username=root
 spring.datasource.password=123456789
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.mysql.console.enabled=true
