--- a/Backend/ms-cart/src/main/resources/application.yml
+++ b/Backend/ms-cart/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: ${PORT:${SERVER_PORT:0}}
+
 spring:
   application:
     name: ms-cart
@@ -13,15 +16,69 @@ spring:
     console:
       enabled: true
 
-server:
-  port: ${PORT:0}
+#eureka:
+#  instance:
+#    hostname: localhost
+#    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+#  client:
+#    service-url:
+#      defaultZone: http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka
 
 eureka:
-  instance:
-    hostname: localhost
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
+    register-with-eureka: true
+    fetch-registry: true
+    registry-fetch-interval-seconds: 5
+    healthcheck:
+      enabled: true
     service-url:
-      defaultZone: http://${EUREKA_HOST:localhost}:${EUREKA_PORT:8761}/eureka
+      default-zone: http://localhost:8761/eureka
+    instance:
+      prefer-ip-address: false
+      lease-renewal-interval-in-seconds: 5
+      lease-expiration-duration-in-seconds: 10
+
+management:
+  info:
+    env:
+      enabled: true
+  endpoint:
+    info:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: info
+
+info:
+  app:
+    name: ms-cart
+    description: ms-cart
+    version: 1.0.0
+
+
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      guardandoEnSerieService:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 15000
+        permittedNumberOfCallsInHalfOpenState: 3
+        registerHealthIndicator: true
+        allowHealthIndicatorToFail: false
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+
+
+  retry:
+    instances:
+      guardandoEnSerieService:
+        waitDuration: 1000
+        maxAttempts: 3
+        retryExceptions:
+          - feign.FeignException$InternalServerError
+
 
 
