--- a/Backend/ms-gateway/src/main/resources/application.yml
+++ b/Backend/ms-gateway/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
         registration:
           keycloak:
             client-id: ${KEYCLOAK_CLIENT_ID:LaDuquesa}
-            client-secret: ${KEYCLOAK_CLIENT_SECRET:BZnbBjaWjsAaUxNYZzv2ZKhokWyhxzqs}
+            client-secret: ${KEYCLOAK_CLIENT_SECRET:lJRb5FJxD9bx052xeyQOUIgH2E11X5dX}
             redirect-uri: '{baseUrl}/login/oauth2/code/keycloak'
             scope: openid
 
@@ -64,10 +64,16 @@ spring:
             - Path=/java/**
           filters:
             - StripPrefix=1
-        - id: ms-go
-          uri: lb://ms-go
+        - id: ms-cart
+          uri: lb://ms-cart
           predicates:
-            - Path=/go/**
+            - Path=/cart/**
+          filters:
+            - StripPrefix=1
+        - id: msproduct
+          uri: lb://msproduct
+          predicates:
+            - Path=/product/**
           filters:
             - StripPrefix=1
         - id: ms-users
