--- a/Frontend/la-duquesa-ecommerce/package.json
+++ b/Frontend/la-duquesa-ecommerce/package.json
@@ -19,11 +19,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@mui/material": "^5.15.19",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.23.1",
-    "swiper": "^11.1.3"
+    "swiper": "^11.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
