--- a/Frontend/la-duquesa-ecommerce/package.json
+++ b/Frontend/la-duquesa-ecommerce/package.json
@@ -26,7 +26,7 @@
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.3",
-    "xlsx": "^0.18.5"
+    "write-excel-file": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
