--- a/Frontend/la-duquesa-ecommerce/package.json
+++ b/Frontend/la-duquesa-ecommerce/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.2.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.3",
     "write-excel-file": "^2.0.2"
   },
