--- a/Backend/ms-gateway/src/main/resources/application.yml
+++ b/Backend/ms-gateway/src/main/resources/application.yml
@@ -27,17 +27,23 @@ spring:
 
   security:
     oauth2:
-      client:
-        provider:
-          keycloak:
-            user-name-attribute: preferred_username
-            issuer-uri: http://${KEYCLOAK_HOST:localhost}:${KEYCLOAK_PORT:8080}/realms/${KEYCLOAK_REALM:LaDuquesa}
-        registration:
-          keycloak:
-            client-id: ${KEYCLOAK_CLIENT_ID:LaDuquesa}
-            client-secret: ${KEYCLOAK_CLIENT_SECRET:lJRb5FJxD9bx052xeyQOUIgH2E11X5dX}
-            redirect-uri: '{baseUrl}/login/oauth2/code/keycloak'
-            scope: openid
+
+      # As Client
+
+      #client:
+      #  provider:
+      #    keycloak:
+      #      user-name-attribute: preferred_username
+      #      issuer-uri: http://${KEYCLOAK_HOST:localhost}:${KEYCLOAK_PORT:8080}/realms/${KEYCLOAK_REALM:LaDuquesa}
+      #  registration:
+      #    keycloak:
+      #      client-id: ${KEYCLOAK_CLIENT_ID:LaDuquesa}
+      #      client-secret: ${KEYCLOAK_CLIENT_SECRET:0YSqadlisrDFeWuXWMsz12mPWe6PIsJ7}
+      #      redirect-uri: '{baseUrl}/login/oauth2/code/keycloak'
+      #      scope: openid
+      resourceserver:
+        jwt:
+          issuer-uri: http://${KEYCLOAK_HOST:localhost}:${KEYCLOAK_PORT:8080}/realms/${KEYCLOAK_REALM:LaDuquesa}
 
   cloud:
     gateway:
@@ -65,6 +71,18 @@ spring:
             - Path=/java/**
           filters:
             - StripPrefix=1
+        - id: ms-go
+          uri: lb://ms-go
+          predicates:
+            - Path=/go/**
+          filters:
+            - StripPrefix=1
+        - id: ms-users
+          uri: lb://ms-users
+          predicates:
+            - Path=/users/**
+          filters:
+            - StripPrefix=1
         - id: ms-cart
           uri: lb://ms-cart
           predicates:
@@ -77,12 +95,7 @@ spring:
             - Path=/product/**
           filters:
             - StripPrefix=1
-        - id: ms-users
-          uri: lb://ms-users
-          predicates:
-            - Path=/users/**
-          filters:
-            - StripPrefix=1
+
 
 logging:
   level:
