--- a/Frontend/la-duquesa-ecommerce/package.json
+++ b/Frontend/la-duquesa-ecommerce/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@mui/material": "^5.15.19",
+    "axios": "^1.7.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
