--- a/Backend/ms-cart/src/main/resources/application.yml
+++ b/Backend/ms-cart/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mscart
     username: root
-    password: jere26265042
+    password: root
   jpa:
     show-sql: true
     hibernate:
