--- a/Backend/ms-cart/src/main/resources/application.yml
+++ b/Backend/ms-cart/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mscart
     username: root
-    password: jere26265042
+    password: root
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
   mysql:
     console:
       enabled: true
