--- a/Backend/ms-discovery/Dockerfile
+++ b/Backend/ms-discovery/Dockerfile
@@ -1,4 +1,4 @@
 FROM ghcr.io/graalvm/native-image-community:21
-ARG JAR_FILE=target/ms-users-0.0.1-SNAPSHOT.jar
-COPY ./target/ms-users-0.0.1-SNAPSHOT.jar app.jar
+ARG JAR_FILE=target/ms-discovery-0.0.1.jar
+COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
