--- a/Backend/ms-discovery/pom.xml
+++ b/Backend/ms-discovery/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.dh</groupId>
     <artifactId>ms-discovery</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>ms-discovery</name>
     <description>ms-discovery</description>
     <properties>
