--- a/Backend/ms-discovery/src/main/resources/application.yml
+++ b/Backend/ms-discovery/src/main/resources/application.yml
@@ -31,6 +31,6 @@ eureka:
     healthcheck:
       enabled: true
     service-url:
-      default-zone: http://localhsot:8761/eureka
+      default-zone: http://localhost:8761/eureka
   instance:
     prefer-ip-address: true
