--- a/Backend/msPayP/resources/application.yml
+++ b/Backend/msPayP/resources/application.yml
@@ -1,7 +1,7 @@
 instance:
-  hostName: "localhost"
+  hostName: "192.168.56.1"
   app: "MSPAYP"
-  ipAddr: "192.168.0.87"
+  ipAddr: "192.168.56.1"
   status: "UP"
   port:
   #Lo comentamos ya que estamos generando un puerto automáticamente
