--- a/Frontend/la-duquesa-ecommerce/package.json
+++ b/Frontend/la-duquesa-ecommerce/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
+    "@mercadopago/sdk-react": "^0.0.19",
     "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
     "jspdf": "^2.5.1",
